# kompass

./: .cruft.json  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  Usage.md  flake.nix  pyproject.toml
.github/actions/with-docker/: action.yml
.github/workflows/: Dockerfile  test.yml  update-version.yml
koala/: Makefile  pyproject.toml
koala/src/koala/: __main__.py
koala/src/kompass/kdist/sol-semantics/: accounts.md
ksol/: README.md  flake.nix  pyproject.toml
ksol/src/tests/unit/: test_unit.py
package/: version.sh
src/kompass/: __init__.py  __main__.py  kompass.py  options.py
src/kompass/kdist/: plugin.py
src/kompass/kdist/kompass/: accounts.md  kompass.md  p-token.md  spl-token.md  transactions.md
src/kompass/kdist/sol-semantics/: ksol.md
src/tests/integration/: test_integration.py
src/tests/integration/data/simple/main-crate/: crate2::main.expected  crate2::test_crate1_with.fail.expected  main.expected  test_crate1_with.fail.expected
