[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kompass"
version = "0.1.0"
description = "K Semantics for the Solana ecosystem"
authors = [
    "Runtime Verification, Inc. <contact@runtimeverification.com>",
]

[tool.poetry.scripts]
kompass = "kompass.__main__:main"

[tool.poetry.plugins.kdist]
kompass = "kompass.kdist.plugin"

[tool.poetry.dependencies]
python = "^3.10"
kmir = { git = "https://github.com/runtimeverification/mir-semantics.git", rev = "79e5d699ed9c7e0344819940707b8d9654d784c5", subdirectory = "kmir" }

[tool.poetry.group.dev.dependencies]
autoflake = "*"
black = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-comprehensions = "*"
flake8-quotes = "*"
flake8-type-checking = "*"
isort = "*"
mypy = "*"
pep8-naming = "*"
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
pytest-xdist = "*"
pyupgrade = "*"

[tool.isort]
profile = "black"
line_length = 120

[tool.autoflake]
recursive = true
expand-star-imports = true
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.mypy]
disallow_untyped_defs = true
