[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kompass"
version = "0.1.8"
description = "K Semantics for the Solana ecosystem"
requires-python = "~=3.10"
dependencies = [
    "kmir@git+https://github.com/runtimeverification/mir-semantics.git@v0.4.103#subdirectory=kmir",
]

[[project.authors]]
name = "Runtime Verification, Inc."
email = "contact@runtimeverification.com"

[tool.uv.sources]
kmir = { git = "https://github.com/runtimeverification/mir-semantics.git", rev = "v0.4.103", subdirectory = "kmir" }

[project.scripts]
kompass = "kompass.__main__:main"

[project.entry-points.kdist]
kompass = "kompass.kdist.plugin"

[dependency-groups]
dev = [
    "autoflake",
    "black",
    "flake8",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-quotes",
    "flake8-type-checking",
    "isort",
    "mypy",
    "pep8-naming",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
    "pyupgrade",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.isort]
profile = "black"
line_length = 120

[tool.autoflake]
recursive = true
expand-star-imports = true
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.mypy]
disallow_untyped_defs = true
